--- a/res/layout/activity_main_page.xml
+++ b/res/layout/activity_main_page.xml
@@ -13,25 +13,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/alkuteksti" />
-    
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_below="@+id/textView1"
+        android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <Button
             android:id="@+id/buttonListView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onClickOpenList"
             android:text="@string/button_openList" />
 
         <Button
             android:id="@+id/buttonPictureView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onClickOpenImage"
             android:text="@string/button_openPicture" />
     </LinearLayout>
+
 </RelativeLayout>
