--- a/res/layout/activity_kuvanakyma.xml
+++ b/res/layout/activity_kuvanakyma.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_launcher" 
-        android:contentDescription="Kuva" />
+        android:contentDescription="@string/image_kuva" />
    
     
     <TextView
