--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -13,7 +13,8 @@
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher" 
+        android:contentDescription="@string/logo"/>
 
     <TextView
         android:id="@+id/bottom"
